--- a/style.css
+++ b/style.css
@@ -11,7 +11,15 @@
   color: white;
   text-align: center;
 }
-
+.content {
+  background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3));
+  padding: 2rem;
+  border-radius: 10px;
+  color: #fff;
+  max-width: 800px;
+  margin: auto;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+}
 /* Section-Specific Backgrounds */
 #mission {
   background-image: url('assets/images/glimpses.jpg');
