--- a/style.css
+++ b/style.css
@@ -18,13 +18,14 @@ body, html {
   scroll-behavior: smooth;
 }
 .content {
-  background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3));
+  background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.5));
   padding: 2rem;
   border-radius: 10px;
   color: #fff;
   max-width: 800px;
   margin: auto;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+}
   .content h1 {
   font-weight: 600;
 }
