--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body, html {
 }
 /* Section-Specific Backgrounds */
 #mission {
-  background-image: url('assets/images/glimpses.jpg');
+  background-image: url('assets/images/emerald-city-01.jpg');
 }
 
 #wizard {
