--- a/style.css
+++ b/style.css
@@ -189,3 +189,17 @@ a {
   color: white;
   text-align: center;
 }
+#san-juan {
+  background-image: url('assets/images/sanjuan.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background-attachment: scroll; /* ensures no parallax effect */
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 4rem 2rem;
+  color: white;
+  text-align: center;
+}
