--- a/style.css
+++ b/style.css
@@ -71,6 +71,9 @@ body, html {
 #cartography {
   background-image: url('assets/images/cartographic-intentions.jpg');
 }
+#grace {
+  background-image: url('assets/images/return-to-grace.jpg');
+}
 #footer {
   background-image: url('assets/images/footer.jpg');
 }
