--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body, html {
   background-image: url('assets/images/cartographic-intentions.jpg');
 }
 #grace {
-  background-image: url('assets/images/pathway.jpg');
+  background-image: url('assets/images/pathway.png');
 }
 #footer {
   background-image: url('assets/images/footer.jpg');
