--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ body, html {
   background-image: url('assets/images/pathway.png');
 }
 #footer {
-  background-image: url('assets/images/footer.jpg');
+  background-image: url('assets/images/leaving-oz.png');
 }
 
 /* Content Styling */
