--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body, html {
   background-image: url('assets/images/why-stickers-matter.jpg');
 }
 #mission {
-  background-image: url('assets/images/gates.jpg');
+  background-image: url('assets/images/entering-oz.png');
 }
 #wizard {
   background-image: url('assets/images/the-wizard.jpg');
